--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,8 @@
     /*"DefaultConnection": "Server=philo.mysql.database.azure.com;Database=philo_site;Uid=philo@philo;Pwd=hj332*KO"*/
     /*"DefaultConnection": "Server=85.10.205.173;Database=philsearch;Uid=philsearch;Pwd=hj332*KO"*/
     /*"DefaultConnection": "Server=philsearch.mysql.database.azure.com;Database=philsearch;Uid=philsearch@philsearch;Pwd=hj332*KO"*/
-		"DefaultConnection": "Server=206.72.206.122;Database=philsearch;Uid=philsearch;Pwd=y4eG=Q1+rs4"
+    /*"DefaultConnection": "Server=206.72.206.122;Database=philsearch;Uid=philsearch;Pwd=y4eG=Q1+rs4"*/
+    "DefaultConnection": "Data Source=C://Temp/philsearch.sqllite;Version=3;"
   },
   "SearchArticlesWS": "https://morning-escarpment-86485.herokuapp.com/philo/api/v1.0/articles",
   "SemanticNetworkWS": "https://quiet-wave-87577.herokuapp.com/philo/api/v1.0/semnet"
